--- a/vlm.ipynb
+++ b/vlm.ipynb
@@ -1,19 +1,81 @@
-#Tool import
-###
-import pandas as pd
-from pathlib import Path
-
-import torch
-from torch.utils.data import Dataset, DataLoader
-from torchvision import transforms
-from PIL import Image
-import matplotlib.pyplot as plt
-import tiktoken
-
-#Import image files & 
-###
-image_comments_folder = Path("/Users/michaelbai/ML/dataset/flickr30k_images")
-image_comments_file = image_comments_folder / "results.csv" 
-images_folder = image_comments_folder / "flickr30k_images"
-print(image_comments_file)
-list(images_folder.glob("*.jpg"))[:2]
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torchvision import transforms\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tiktoken"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/michaelbai/ML/dataset/flickr30k_images/results.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[PosixPath('/Users/michaelbai/ML/dataset/flickr30k_images/flickr30k_images/2609797461.jpg'),\n",
+       " PosixPath('/Users/michaelbai/ML/dataset/flickr30k_images/flickr30k_images/1788892671.jpg')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_comments_folder = Path(\"/Users/michaelbai/ML/dataset/flickr30k_images\")\n",
+    "image_comments_file = image_comments_folder / \"results.csv\" \n",
+    "images_folder = image_comments_folder / \"flickr30k_images\"\n",
+    "print(image_comments_file)\n",
+    "list(images_folder.glob(\"*.jpg\"))[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "torch",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
