--- a/vlm.ipynb
+++ b/vlm.ipynb
@@ -118,6 +118,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Config:\n",
+    "    # Image\n",
+    "    img_width_size = 400\n",
+    "    img_height_size = 400\n",
+    "\n",
+    "    # Text\n",
+    "    max_text_len = 50\n",
+    "\n",
+    "def load_image_tensor(config: Config, img_file_path: Path) -> torch.tensor:\n",
+    "    # Load image from file\n",
+    "    img = Image.open(img_file_path)\n",
+    "    print()\n",
+    "    print(f\"img: {img}\")\n",
+    "    \n",
+    "    # Convert to tensor\n",
+    "    convert_tensor = transforms.ToTensor()\n",
+    "    image_tensor = convert_tensor(img)\n",
+    "\n",
+    "    # resize base on config\n",
+    "    resize = transforms.Resize(size=(config.img_height_size, config.img_width_size))\n",
+    "    image_tensor = resize(image_tensor)\n",
+    "    return image_tensor\n",
+    "\n",
+    "# Create Dataset \n",
+    "class ImgCommentDataset(Dataset):\n",
+    "    def __init__(self, config: Config,  img_comments_folder: Path, train_test_split: str = \"train\", train_test_split_portion: float = 0.8):\n",
+    "        self.config = config\n",
+    "        self.img_commments_folder = img_comments_folder\n",
+    "        self.img_comments_file = img_comments_folder / \"results.csv\"\n",
+    "        self.imgs_folder = img_comments_folder / \"flickr30k_images\"\n",
+    "        \n",
+    "        self.train_test_split = train_test_split\n",
+    "        self.train_test_split_portion = train_test_split_portion\n",
+    "\n",
+    "        # The current `results.csv` file is using \"| \" to seperate 3 columns. \n",
+    "        # For the pd.read_csv, the `sep` here is given as a regular expression. \n",
+    "        df = pd.read_csv(self.img_comments_file, sep=\"|\")\n",
+    "        train_split_len = int(len(df)*self.train_test_split_portion)\n",
+    "        if self.train_test_split == \"train\":\n",
+    "            self.img_comments_df = df[:train_split_len]\n",
+    "        else:\n",
+    "            self.img_comments_df = df[train_split_len:]\n",
+    "        \n",
+    "        self.text_encoder = tiktoken.encoding_for_model(\"gpt-4o\")\n",
+    "            \n",
+    "    def __len__(self):\n",
+    "        return len(self.img_comments_df)\n",
+    "    \n",
+    "    def __getitem__(self, idx:int):\n",
+    "        print(f\"idx: {idx}\")\n",
+    "        row_df = self.img_comments_df[idx: idx+1]\n",
+    "        image_name = str(list(row_df[\"image_name\"])[0])\n",
+    "        assert (self.imgs_folder/image_name).is_file(), f\"cannot find file: {self.img_commments_folder/image_name}\"\n",
+    "\n",
+    "        comment_number = int(list(row_df[\"comment_number\"])[0])\n",
+    "        comment = str(list(row_df[\"comment\"])[0])\n",
+    "        comment_encoding = self.text_encoder.encode(comment)\n",
+    "        if len(comment_encoding) > self.config.max_text_len:\n",
+    "            comment_encoding = comment_encoding[:self.config.max_text_len]\n",
+    "        else:\n",
+    "            # TODO: review append `<|im_end|>` - 200265 logic\n",
+    "            comment_encoding = comment_encoding + [200265 for _ in range(self.config.max_text_len - len(comment_encoding))]\n",
+    "        assert len(comment_encoding) == self.config.max_text_len\n",
+    "        comment_encoding = torch.tensor(comment_encoding, dtype=torch.int)\n",
+    "        \n",
+    "        # return load_image_tensor(self.imgs_folder/image_name), comment_number, comment, comment_encoding\n",
+    "        image_tensor = load_image_tensor(self.config, self.imgs_folder/image_name)\n",
+    "\n",
+    "        return image_tensor, comment_encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "127132 31783\n"
+     ]
+    }
+   ],
+   "source": [
+    "config = Config()\n",
+    "\n",
+    "train_dataset = ImgCommentDataset(config, image_comments_folder, train_test_split=\"train\", train_test_split_portion=0.8)\n",
+    "test_dataset = ImgCommentDataset(config, image_comments_folder, train_test_split=\"test\", train_test_split_portion=0.8)\n",
+    "print(len(train_dataset), len(test_dataset))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
